# esp-idf-logs-spiffs

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml
esp_logs_spiffs/: idf_component.yml
esp_logs_spiffs/include/: logs_spiffs.h  logs_spiffs_internal.h
esp_logs_spiffs/src/: logs_spiffs.c  logs_spiffs_worker.c
esp_logs_storage/: CMakeLists.txt  idf_component.yml
esp_logs_storage/include/: logs_storage.h  logs_storage_internal.h  logs_storage_rotation.h
esp_logs_storage/src/: logs_storage.c  logs_storage_backend.c  logs_storage_buffer.c  logs_storage_file_utils.c  logs_storage_rotation.c  logs_storage_usb.c  logs_storage_usb_msc.c  logs_storage_worker.c
esp_logs_storage/src/core/: logs_storage.c  logs_storage_backend.c  logs_storage_file_utils.c  logs_storage_rotation.c  logs_storage_web_config.c  logs_storage_worker.c
esp_logs_storage/src/web/: web_api.c  web_dns_server.c  web_main.c  web_ui.c  web_wifi.c
examples/basic/: CMakeLists.txt  idf_component.yml  partitions.csv  sdkconfig.defaults
examples/basic/main/: CMakeLists.txt  main.c
src/: logs_spiffs_storage.c  logs_spiffs_worker.c
